authentik/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: use-vc
      containers:
        - name: worker
          image: ghcr.io/goauthentik/server:2026.8.3@sha256:ab9b4e8cc4ab3f8d1198d2db6aeea66bafea1963b3f2843589e0d163f97d9849
          args: ["worker"]
          volumeMounts:
            - name: media
              mountPath: /media
            - name: certs
              mountPath: /certs
            - name: templates
              mountPath: /templates
          resources:
            limits:
              memory: "1Gi"
              cpu: "750m"
            requests:
              memory: "256Mi"
              cpu: "50m"
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: authentik-media
        - name: certs
          persistentVolumeClaim:
            claimName: authentik-certs
        - name: templates
          persistentVolumeClaim:
            claimName: authentik-templates
