authentik/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: authentik
spec:
  replicas: 1
  serviceName: postgresql
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:17-alpine@sha256:b0f9560a2de083e2cc7382e75f808c7381a32852a7ec49117deedb300e552b24
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -d $POSTGRES_DB -U $POSTGRES_USER"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -d $POSTGRES_DB -U $POSTGRES_USER"]
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "100m"
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: authentik-pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: authentik
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  type: ClusterIP
