authentik/rac.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rac-outpost
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rac-outpost
  template:
    metadata:
      labels:
        app: rac-outpost
    spec:
      containers:
        - name: rac
          image: ghcr.io/goauthentik/rac:2026.8.3@sha256:d8fb4882ee1d8642375c61378fbedb90117b800088896da62703690decc9e3c1
          ports:
            - containerPort: 4822
              name: guacd
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "25m"
---
apiVersion: v1
kind: Service
metadata:
  name: rac-outpost
  namespace: authentik
spec:
  selector:
    app: rac-outpost
  ports:
    - port: 4822
      targetPort: 4822
      name: guacd
  type: ClusterIP
