authentik/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: authentik
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
      annotations:
        backup.velero.io/backup-volumes-excludes: templates
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: use-vc
      containers:
        - name: server
          image: ghcr.io/goauthentik/server:2026.8.3@sha256:ab9b4e8cc4ab3f8d1198d2db6aeea66bafea1963b3f2843589e0d163f97d9849
          args: ["server"]
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9443
              name: https
          volumeMounts:
            - name: media
              mountPath: /media
            - name: templates
              mountPath: /templates
          readinessProbe:
            httpGet:
              path: /-/health/ready/
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /-/health/live/
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            limits:
              memory: "1280Mi"
              cpu: "750m"
            requests:
              memory: "512Mi"
              cpu: "100m"
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: authentik-media
        - name: templates
          persistentVolumeClaim:
            claimName: authentik-templates
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  type: NodePort
  selector:
    app: authentik-server
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      nodePort: 30900
